@@ -1,14 +1,0 @@
-name             = Padre-Plugin-ClassSniff
-author           = Steffen Mueller <smueller@cpan.org>
-author           = Ahmad M. Zawawi <ahmad.zawawi@gmail.com>
-license          = Perl_5
-version          = 0.30
-copyright_holder = Steffen Mueller
-
-[@PadrePlugin]
-
-homepage         = http://padre.perlide.org
-repository       = http://svn.perlide.org/padre/trunk/Padre-Plugin-ClassSniff/
-
-[Prereqs]
-Class::Sniff     = 0.08
